# AI-Legal-Case-Researcher

./: .env.example  .gitignore  README.md  agents.py  config.py  crew.py  main.py  pyproject.toml  requirements.txt  setup.py  tasks.py  test_system.py
legal_documents/: IPC.txt  constitution.txt  ica_1872.txt  iea_1872.txt  the_code_of_civil_procedure._1908.txt  the_code_of_criminal_procedure._1973.txt  the_companies_act_2013.txt  the_transfer_of_property_act_1872.txt
outputs/: legal_research_report_20251011_172306.md
src/legal_ai/: agents.py  config.py  crew.py  ingest.py  main.py  prompts.py  run_flow.py  schemas.py  tasks.py
src/legal_ai/flows/: flow.py
src/legal_ai/tools/: indian_kanoon.py  rag.py
src/legal_ai/utils/: text_preprocess.py
test_cases/: sample_bail_case.txt
tools/: __init__.py  analysis_tools.py  rag_tools.py  web_tools.py
