
[tool.poetry]
name = "ai-legal-case-researcher"
version = "0.1.0"
description = "AI Legal Case Researcher using CrewAI, LangChain FAISS-based RAG, and optional Indian Kanoon API"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "legal_ai", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = { version = ">=0.56.0", extras = ["tools"] }
langchain = ">=0.2.10"
langchain-community = ">=0.2.10"
faiss-cpu = ">=1.7.4"
sentence-transformers = ">=3.0.1"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.1"
python-dotenv = ">=1.0.1"
beautifulsoup4 = ">=4.12.3"
requests = ">=2.32.3"
tqdm = ">=4.66.5"
numpy = ">=1.26.4"
markdownify = ">=0.13.1"

# Optional - some platforms need this for sentence-transformers
torch = {version=">=2.2.0", optional=true}

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.5"
black = ">=24.4.2"
ruff = ">=0.5.7"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
